# monads

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/mtx/: monads.hpp
tests/: CMakeLists.txt  composition.cpp  example.cpp  exceptions.cpp  maybe.cpp
